# DQA-PPT-Generation

./: .firebaserc  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  GEMINI_CLI_TOOLS_API.md  HANDOFF_ARTIFACTS_CHECKLIST.md  HEPHAESTUS_BOOTSTRAP_GUIDE.md  PROJECT_DIAL_DECISION_PACKAGE.md  PROJECT_DIAL_SPRINT1_ROADMAP.md  README.md  RELEASE_NOTES_HANDOFF.md  airules.md  final_pr1.patch  firebase.json  pyproject.toml  requirements.txt  you
agent_engineering/: main.py  pyproject.toml
agent_engineering/src/: parallel_pattern_adk.py  parallel_pattern_langchain.py  play_langchain.py
agents/readme-creator/: .env.example  README.md  pyproject.toml
agents/readme-creator/eval/: test_eval.py
agents/readme-creator/eval/data/: simple.test.json  test_config.json
agents/readme-creator/readme_creator/: agent.py
agents/readme-creator/tests/: test_agent.py
google-agent-cli-recipe/samples/retail-product-search/: README.md  pyproject.toml
google-agent-cli-recipe/samples/retail-product-search/app/: agent.py  retrievers.py
google-agent-cli-recipe/samples/retail-product-search/assets/: design-spec.md
google-agent-cli-recipe/samples/retail-product-search/references/: agent-example.md  audio-integration.md  evaluation-guide.md  ingestion-scripts.md  terraform-example.md
google-agent-cli-recipe/samples/retail-product-search/scripts/: api_connector.py  cleanup.py  ingest_bigquery.py  ingest_gcs.py  ingest_vertex_search.py  live_search.py  pubsub_sync.py
google-agent-cli-recipe/samples/retail-virtual-tryon/: README.md  pyproject.toml
google-agent-cli-recipe/samples/retail-virtual-tryon/app/: tryon_agent.py  tryon_processor.py
google-agent-cli-recipe/samples/retail-virtual-tryon/assets/: design-spec.md
google-agent-cli-recipe/samples/retail-virtual-tryon/references/: tryon-architecture.md
google-agent-cli-recipe/samples/retail-virtual-tryon/scripts/: setup.py  setup_tryon.py
mcp_server/: Dockerfile  firebase_docs_mcp.py  main.py  pyproject.toml
mcp_server/mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/agents/RAG/: .env.example  CODEOWNERS  Makefile  README.md  main.py  pyproject.toml  requirements.txt
python/agents/RAG/deployment/: deploy.py  grant_permissions.sh  run.py
python/agents/RAG/eval/: test_eval.py  test_eval_arize.py  test_single_eval.py
python/agents/RAG/rag/: __init__.py  agent.py  agent_engine_app.py  prompts.py  tracing.py
python/agents/RAG/tests/: test_prepare_multi_file.py
python/agents/a2a-adk-auth/: Dockerfile  README.md  pyproject.toml
python/agents/a2a-adk-auth/app/: agent.py  agent_executor.py  main.py
python/agents/academic-research/: CODEOWNERS  README.md  pyproject.toml
python/agents/academic-research/academic_research/: __init__.py  agent.py  callbacks.py  prompt.py
python/agents/academic-research/eval/: test_eval.py
python/agents/auto-insurance-agent/: CODEOWNERS  README.md  pyproject.toml
python/agents/auto-insurance-agent/auto_insurance_agent/: agent.py  tools.py
python/agents/auto-insurance-agent/deployment/: deploy.py  test_deployment.py
python/agents/automated_competitive_intelligence/: Dockerfile  README.md  cloudbuild.yaml  deploy.sh  pyproject.toml  requirements.txt  run_local.sh  setup.sh  streamlit_app.py
python/agents/automated_competitive_intelligence/backend/: agent.py  config.py  prompt.py  telemetry.py
python/agents/automated_competitive_intelligence/frontend/: index.html  package-lock.json  package.json
python/agents/automated_competitive_intelligence/tests/: test_api_main.py  test_document_downloader.py  test_initialize_state.py  test_prompts.py  test_tools.py
python/agents/bidi-demo/: .dockerignore  Dockerfile  README.md  pyproject.toml
python/agents/bidi-demo/agent_engine/: cleanup.py  deploy.py  test.py
python/agents/bidi-demo/app/: health.py  main.py
python/agents/brand-adherent-research-deck-agent/: README.md  pyproject.toml
python/agents/brand-aligned-presentations/: .env.example  Makefile  README.md  pyproject.toml
python/agents/capital-guess-game/: .env.example  README.md  pyproject.toml
python/agents/crypto-payroll-agent/: .env.example  README.md  pyproject.toml
python/agents/customer-service/: .env.example  CODEOWNERS  README.md  pyproject.toml
python/agents/customer-support-agent-production/: .env.example  .gitignore  .pre-commit-config.yaml  GETTING_STARTED.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
python/agents/data-engineering/: .env.example  README.md  pyproject.toml
python/agents/data-engineering-agent/: README.md  pyproject.toml
python/agents/data-science/: .env.argolis  .env.example  .env.styer-genai-sa  BOOTCAMP_SETUP.md  CODEOWNERS  Dockerfile  Makefile  README.md  main.py  pyproject.toml  toolbox-alloydb-local.yaml  toolbox-alloydb-remote.yaml  toolbox-alloydb.yaml  toolbox-postgres.yaml  toolbox.yaml  toolbox_env.sh
python/agents/frosty/: .env.example  README.md  pyproject.toml
python/agents/game-dev-assistant/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
python/agents/google-agent-cli-recipe/: .env.example  README.md  pyproject.toml
python/agents/google-trends-agent/: README.md  pyproject.toml
python/agents/image-scoring/: .env.example  README.md  pyproject.toml
python/agents/machine-learning-engineering/: .gitignore  README.md  pyproject.toml
python/agents/market-research-agent/: .env.example  README.md  pyproject.toml
python/agents/mcp-iam-authn-agent/: README.md  aaa.conf  adk_agent_operations.sh  pyproject.toml
python/agents/openregistry-belgium-kbo-bce/: README.md  pyproject.toml
starter-template/: .env example  README.md  pyproject.toml
starter-template/deployment/: deploy.py
starter-template/eval/: test_eval.py
starter-template/eval/data/: test.json  test_config.json
starter-template/starter_template/: agent.py  prompt.py
starter-template/starter_template/shared_libraries/: helper.py
starter-template/starter_template/tools/: example_tool.py
starter-template/tests/unit/: test_tools.py
(+3055 files in other folders)
