[project]
name = "firecrawl-mcp-server"
version = "0.1.0"
description = "A simple FastAPI server to wrap the Firecrawl API for MCP."
authors = ["Google Gemini"]

[project.dependencies]
firecrawl = "^0.0.31"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.1"
