[project]
name = "retail-product-search"
version = "0.1.0"
description = "Semantic product search agent using Vertex AI Vector Search and BigQuery"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "google-cloud-bigquery>=3.0",
    "google-cloud-storage>=2.0",
    "google-cloud-vectorsearch>=0.1",
    "google-cloud-aiplatform>=1.30",
    "google-cloud-pubsub>=2.0",
    "google-genai>=1.0",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
voice = [
    "pyaudio>=0.2.14",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -v"
log_cli = true
log_cli_level = "INFO"
