[project]
name = "retail-virtual-tryon"
version = "0.1.0"
description = "Virtual try-on agent using Gemini image generation models on Vertex AI"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

# Use the new unified Google Gen AI SDK (google-genai), not the legacy
# google-cloud-aiplatform / vertexai.generative_models. Set the env var
# GOOGLE_GENAI_USE_VERTEXAI=True to route through Vertex AI.
dependencies = [
    "google-genai>=1.0",
    "google-cloud-storage>=2.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -v"
log_cli = true
log_cli_level = "INFO"
