[project]
name = "rag"
version = "0.1.0"
description = "Answer questions related to Vertex AI documentation using Vertex AI RAG Engine"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Hangfei Lin", email = "hangfei@google.com"},
    {name = "Chouaieb Nemri", email = "nemri@google.com"},
]
dependencies = [
    "pydantic-settings>=2.8.1",
    "tabulate>=0.9.0",
    "google-auth>=2.36.0",
    "requests>=2.32.3",
    "google-adk>=1.10.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.108.0",
    "llama-index>=0.12",
    "arize-otel>=0.8.2; python_version >= '3.11' and python_version < '3.13'",
    "openinference-instrumentation-google-adk>=0.1.0; python_version >= '3.11' and python_version < '3.14'",
    "openinference-instrumentation>=0.1.34",
    "arize>=7.36.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6",
    "mypy>=1.15.0",
    "codespell>=2.2.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20240914",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "scikit-learn>=1.6.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.26.0",
    "agent-starter-pack>=0.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "B", "UP", "RUF"]
ignore = ["E501", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["rag"]

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [".venv"]

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.agent-starter-pack]
example_question = "What are the key business segments mentioned in Alphabet's 2024 10-K report?"

[tool.agent-starter-pack.settings]
agent_directory = "rag"