[project]
name = "a2a-adk-auth"
version = "0.1.0"

dependencies = [
    "fastapi>=0.115.8,<1.0.0",
    "uvicorn~=0.34.0",
    "google-cloud-storage>=3.10.1",
    "a2a-sdk~=0.3.22",
    "google-adk==1.28.1",
]
requires-python = ">=3.10,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]