[project]
name = "academic-research"
version = "0.1.0"
description = "AI-driven agent designed to facilitate the exploration of the academic landscape"
authors = [{ name = "Antonio Gulli", email = "gulli@google.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Google Cloud SDK Core Libraries
    "google-auth>=2.34.0",
    "google-cloud-aiplatform>=1.70.0",
    "google-cloud-resource-manager>=1.13.1",
    "google-cloud-secret-manager>=2.21.1",
    "google-cloud-storage>=2.18.2",

    # Additional Google Cloud Services
    "google-cloud-service-usage>=1.9.1",
    "google-cloud-run>=0.11.0",
    "google-cloud-artifact-registry>=1.12.0",
    "google-cloud-bigquery>=3.26.0",
    "google-cloud-compute>=1.20.0",
    "google-cloud-logging>=3.11.3",
    "google-cloud-build>=3.31.3",
    "google-cloud-iam>=2.16.0",

    # Advanced Google Cloud Services
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-functions>=1.13.0",
    "google-cloud-container>=2.35.0",
    "google-cloud-firestore>=2.14.0",
    "google-cloud-scheduler>=2.13.0",
    "google-cloud-api-gateway>=1.10.0",
    "google-cloud-billing>=1.12.0",
    
    # Google API Client (for Cloud SQL and other REST APIs)
    "google-api-python-client>=2.108.0",

    # Protocol Buffers and gRPC
    "grpcio>=1.67.1",
    "grpcio-status>=1.67.1",
    "googleapis-common-protos>=1.66.0",
    "protobuf>=5.28.3",

    # Other dependencies
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "google-adk[eval]>=1.0.0",
    "google-cloud-aiplatform[adk,agent-engines,evaluation]>=1.93.0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "agent-starter-pack>=0.14.1",
]

deployment = [
    "absl-py>=2.2.1",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.30.0",
]
lint = [
    "ruff>=0.4.6",
    "mypy>=1.15.0",
    "codespell>=2.2.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20240914",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["academic_research"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["misc", "no-untyped-call", "no-any-return"]

exclude = [".venv"]

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.uv.build-backend]
module-root = ""

[tool.agent-starter-pack]
example_question = "Analyze the Attention is All You Need paper"

[tool.agent-starter-pack.settings]
agent_directory = "academic_research"