[project]
name = "auto-insurance-agent"
version = "0.1.0"
description = "AI agent for auto insurance using Apigee API Hub for tools"
authors = [
    {name = "David Rush",email = "davidrush@google.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk (>=1.5.0,<2.0.0)",
    "google-cloud-aiplatform[adk,agent-engines] (>=1.100.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "google-cloud-secret-manager (>=2.24.0,<3.0.0)"
]

[tool.ruff]
# Points back to the Master template in the root
extend = "../../pyproject.toml"

[tool.ruff.lint.isort]
# This tells Ruff which directories contains the sample's core code to group
# imports correctly
known-first-party = ["auto_insurance_agent", "deployment"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
