# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "competitive-intelligence-engine"
version = "0.1.0"
description = "A competitive intelligence engine using Gemini and ADK."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "python-dotenv",
    "python-multipart",
    "google-cloud-aiplatform",
    "google-generativeai",
    "google-adk",
    "google-cloud-storage",
    "httpx",
    "aiofile",
    "beautifulsoup4",
    "playwright",
    "PyMuPDF",
    "Pillow",
    "sentence-transformers",
    "pandas",
    "pydantic",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "streamlit",
    "sseclient",
    "fastapi",
    "uvicorn",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-gcp-trace",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
