# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[project]
name = "brand-adherent-research-deck-agent"
version = "0.1.0"
description = "Generate a brand-adherent deck that integrates custom research."
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
"google-adk>=1.27.4",
"google-auth>=2.45.0",
"google-cloud-aiplatform[agent_engines]>=1.142.0",
"google-cloud-aiplatform[evaluation]>=1.142.0",
"google-cloud-modelarmor>=0.4.0",
"python-pptx==1.0.2",
"pillow==11.3.0",
"pydantic>=2.12.0",
"pydantic-settings==2.13.1",
"python-dotenv==1.1.1",
"google-cloud-storage==2.19.0",
"google-genai>=1.68.0",
"matplotlib==3.10.6",
"requests==2.32.5",
"httpx==0.28.1",
"pytest==8.4.2",
"pytest-asyncio==1.2.0",
"uvicorn==0.37.0",
"black>=24.0.0",
"ruff>=0.3.0"
]

[project.optional-dependencies]
deployment = [
    "absl-py>=2.3.1",
]

[dependency-groups]
dev = [
    "agent-starter-pack",
]

[tool.agent-starter-pack]
template_id = "adk-agent"
agent_module = "presentation_agent.agent"
agent_object = "root_agent"

[tool.setuptools]
packages = ["eval", "deployment", "presentation_agent", "agent_registration"]