[project]
name = "ai-agent"
version = "0.1.0"
description = "OneSync AI Agent"
authors = [
    {name = "Anuj Gupta", email = "anuj3918@gmail.com"},
]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry] # Add this section header if it's not already present for packages
packages = [
    { include = "capital_guess_game", from = "." } # Tells Poetry to look for capital_guess_game directory in the current project path
]
package-mode = false

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true
remove_redundant_aliases = true

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true


[tool.poetry.dependencies]
python = "~3.12"
google-cloud-aiplatform = {extras = ["agent_engines"], version = "1.95.1"}
pydantic-settings = "2.8.1"
google-auth = "2.36.0"
requests = ">=2.32.3,<3.0.0"
google-adk = "1.1.1"
llama-index = "^0.12"
google-genai = "1.16.1"
python-dotenv = "1.0.0"
deprecated = "1.2.14"
cloudpickle = "3.1.1"
pydantic = ">=2.10.6,<3.0.0"
absl-py = ">=2.2.1,<3.0.0"
pytz = "*"
typing-extensions = ">=4.5.0"
annotated-types = ">=0.5.0"
email-validator = ">=2.0.0"
google-cloud-storage = "^2.16.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.3"
google-adk = { version = "^1.1.1", extras = ["eval"] }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.deployment.dependencies]
# This group can be removed or left empty as dependencies are now in the main list.


