[project]
name = "crypto-payroll-agent"
version = "0.1.0"
description = "ADK sample agent for batch stablecoin payroll on Base using Spraay community tools."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "plagtech", email = "hello@spraay.app" },
]
license = { text = "Apache-2.0" }
dependencies = [
    "google-adk>=1.0.0",
    # Spraay tools merged in adk-python-community#95 (May 2025) but not yet
    # in a PyPI release. Pin to git main until a release > 0.4.1 ships.
    "google-adk-community @ git+https://github.com/google/adk-python-community.git@main",
    "google-cloud-aiplatform[adk,agent_engines]>=1.95.0",
    "web3>=6.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crypto_payroll_agent"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
