[project]
name = "data-engineering-agent"
version = "0.1.0"
description = "Data Engineering Agent - LLM Agent that can build Dataform pipelines."
authors = [
    { name = "Samet Karadag", email = "sametkaradag@google.com"},
    { name = "Saurabh Maurya", email = "saurabhmaurya@google.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "google-cloud-bigquery>=3.11.4",
    "google-cloud-dataform>=0.4.0",
    "google-api-core>=2.15.0",
    "google-auth>=2.23.0",
    "google-cloud-core>=2.3.3",
    "protobuf>=4.24.4",
    "typing-extensions>=4.8.0",
    "python-dotenv>=1.0.0",
    "google-adk>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["data_engineering", "deployment"]

[tool.agent-starter-pack]
example_question = "Hi there, I need help with my Database"

[tool.agent-starter-pack.settings]
agent_directory = "data_engineering"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"