[project]
name = "frosty"
version = "0.1.0"
description = "Frosty: a self-hosted multi-agent Snowflake assistant adapted for ADK samples"
authors = [
    {name = "Priyank Malviya"},
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0.0",
    "snowflake>=1.11",
    "snowflake-snowpark-python>=1.11.0",
    "snowflake-connector-python[secure-local-storage]>=3.6.0",
    "google-adk[vertexai]>=1.27.2",
    "litellm>=1.40.0",
    "google-cloud-aiplatform>=1.135.0",
    "google-cloud-modelarmor>=0.4.0",
    "pydantic>=2.5.0",
    "GitPython>=3.1.40",
    "croniter>=2.0.0",
    "python-dateutil>=2.8.2",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-logging>=0.46b0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["frosty", "src"]

[tool.hatch.build.targets.wheel]
packages = ["frosty", "src"]

[tool.hatch.build.targets.sdist]
include = [
    "/frosty",
    "/src",
    "/skills",
    "/tests",
    "/README.md",
    "/.env.example",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
