[project]
name = "google-agent-cli-recipe"
version = "0.1.0"
description = "Retail product search agent with semantic search, virtual try-on, recommendations, and content generation on Google Cloud"
requires-python = ">=3.10"
dependencies = [
    "google-adk",
    "google-genai",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "google-cloud-aiplatform",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]
